# merge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT.txt  README.md  commitlint.config.js  index.html  package-lock.json
.github/workflows/: ci.yml  pages.yml
examples/: args.rs  user.rs
merge_derive/: CHANGELOG.md  Cargo.toml  README.md
merge_derive/src/: lib.rs
scripts/: build_docs.sh  color-picker.js  main.js  main.mjs
src/: lib.rs
styles/: styles.css  themes.css  utils.css
tests/: compile.rs  derive.rs  strategies.rs
tests/compile/: derive-enum.rs  derive-enum.stderr  derive-invalid-attribute.rs  derive-invalid-attribute.stderr  derive-invalid-default-strategy.rs  derive-invalid-default-strategy.stderr  derive-invalid-skip.rs  derive-invalid-skip.stderr  derive-invalid-strategy.rs  derive-invalid-strategy.stderr  derive-missing-strategy.rs  derive-missing-strategy.stderr  derive-no-strategy.rs  derive-no-strategy.stderr  derive-u8.rs  derive-u8.stderr
tests/compile_pass/: derive_generics.rs
