[package]
name = "merge"
version = "0.1.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>", "ItsSunnyMonster <contact@sunnymonster.co>"]
edition = "2021"
description = "Merge multiple values into one"
homepage = "https://github.com/ItsSunnyMonster/merge"
repository = "https://github.com/ItsSunnyMonster/merge"
documentation = "https://itssunnymonster.github.io/merge"
keywords = ["merge", "macros", "derive"]
categories = ["rust-patterns"]
license = "Apache-2.0 OR MIT"
exclude = [".builds/*"]
readme = "README.md"
rust-version = "1.60.0"

[dependencies]
merge_derive = { path = "merge_derive", version = "0.1.0", optional = true }
num-traits = { version = "0.2.12", optional = true }

[dev-dependencies]
envy = "0.4"
toml = "0.5"
trybuild = "1.0"
structopt = "0.3"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["derive", "num", "std"]
derive = ["merge_derive"]
num = ["num-traits"]
std = []

[workspace]
members = ["merge_derive"]
