[package]
name = "merge_derive"
version = "0.1.1"
authors = ["Robin Krahl <robin.krahl@ireas.org>", "ItsSunnyMonster <contact@sunnymonster.co>"]
edition = "2021"
description = "Derive macro for the merge::Merge trait"
repository = "https://github.com/ItsSunnyMonster/merge/tree/master/merge_derive"
keywords = ["merge", "macros", "derive"]
categories = ["rust-patterns"]
readme = "README.md"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "1.0"
